--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,18 @@
-name: ezyscore
+name: ezyscr
 channels:
   - defaults
 dependencies:
-  - ca-certificates=2022.2.1
-  - certifi=2021.10.8
-  - openssl=1.1.1m
-  - pip=21.2.2
-  - python=3.8.12
-  - setuptools=58.0.4
-  - sqlite=3.38.0
-  - wheel=0.37.1
+  - ca-certificates=2022.2.1=haa95532_0
+  - certifi=2021.10.8=py38haa95532_2
+  - openssl=1.1.1m=h2bbff1b_0
+  - pip=21.2.2=py38haa95532_0
+  - python=3.8.12=h6244533_0
+  - setuptools=58.0.4=py38haa95532_0
+  - sqlite=3.38.0=h2bbff1b_0
+  - vc=14.2=h21ff451_1
+  - vs2015_runtime=14.27.29016=h5e58377_2
+  - wheel=0.37.1=pyhd3eb1b0_0
+  - wincertstore=0.2=py38haa95532_2
   - pip:
     - altair==4.2.0
     - anyio==3.5.0
@@ -100,6 +103,8 @@ dependencies:
     - python-dateutil==2.8.2
     - pytz==2021.3
     - pytz-deprecation-shim==0.1.0.post0
+    - pywin32==303
+    - pywinpty==2.0.5
     - pyzmq==22.3.0
     - qtconsole==5.2.2
     - qtpy==2.0.1
