--- a/environment_mac.yml
+++ b/environment_mac.yml
@@ -134,4 +134,4 @@ dependencies:
     - websockets==10.2
     - widgetsnbextension==3.6.0
     - zipp==3.7.0
-prefix: C:\Users\pardo2\AppData\Local\Continuum\anaconda3\envs\ezyscore
+prefix: C:\Users\pardo2\AppData\Local\Continuum\anaconda3\envs\ezyscr
